modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/expenseController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/expenseRestController.java 	modified:   src/main/resources/static/css/contact.css 	modified:   src/main/resources/templates/Budget.html 	modified:   src/main/resources/templates/Contact.html 	modified:   src/main/resources/templates/navigation.html

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -54,7 +54,7 @@
                 </li>
 
                 <li>
-                    <a th:href="@{/budget}">
+                    <a th:href="@{/budgets}">
                         <span class="icon">
                             <ion-icon name="cash-outline"></ion-icon>
                         </span>
