--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -102,4 +102,18 @@
   .breadcrumb-item.active {
       color: #6c757d;
   }
+
+  .overlayTask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Semi-transparent black overlay */
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow-y:auto;
+}
   
