--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -605,3 +605,10 @@ min-height: 100vh;
 display: grid;
 place-items: center;
 }*/
+
+.error-message {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  color: red; /* Set the error message text color to red */
+  font-weight: bold;
+}
