modified:   src/main/resources/templates/navigation.html

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -36,7 +36,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a th:href= "@{/events/calendar}">
                         <span class="icon">
                             <ion-icon name="hourglass-outline"></ion-icon>
                         </span>
