modified:   src/main/resources/templates/eventTab.html

--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -96,6 +96,7 @@
                 <div class="eventDescription"></div>
             </div>
             <button type="button" class="btn myprimarybtn">view sheet</button>
+            <button type="button" class="btn myprimarybtn">edit event</button>
         </aside>
     </div>
     <div id="overlay" class="overlay"  th:replace="~{createEventForm :: createEventForm}">
