--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -6,16 +6,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONTACTS</title>
-<link rel="stylesheet" th:href="@{css/dashboard.css}">
-<link rel="stylesheet" th:href="@{css/navStyle.css}">
-<link rel="stylesheet" th:href="@{css/styles.css}">
-<link rel="stylesheet" th:href="@{css/contact.css}">
+<link rel="stylesheet" th:href="@{/css/dashboard.css}">
+<link rel="stylesheet" th:href="@{/css/navStyle.css}">
+<link rel="stylesheet" th:href="@{/css/styles.css}">
+<link rel="stylesheet" th:href="@{/css/contact.css}">
 </head>
 <body>
 	    <!-- =============== Navigation ================ -->
-		<div class="container">
-			<div class="navigation" th:replace="~{navigation :: navigation}">
+		<div class="navigation" th:replace="~{navigation :: navigation}">
 		</div>
+		<div class="container">
+
 			<!-- ========================= Main ==================== -->
 			
 			<div class="main">
