modified:   src/main/resources/templates/schedule.html

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -15,19 +15,22 @@
 <body>
     <div th:replace="~{navigation :: navigation}"></div>
     <div class="container">
-        <div class="scheduleCalendar">
-            <div id="miniCalendar"></div>
-            <div class="calendar">
-                <!-- monthly calendar control placeholder -->
-                <div class="calendarButton">
-                    <button type="button">Year</button>
-                    <button type="button" class="active">Month</button>
-                    <button type="button">Week</button>
-                    <button type="button">Day</button>
-                </div>
-                <div id="calendar"></div>
-            </div> 
+        <div class="main">
+            <div class="scheduleCalendar">
+                <div id="miniCalendar"></div>
+                <div class="calendar">
+                    <!-- monthly calendar control placeholder -->
+                    <div class="calendarButton">
+                        <button type="button">Year</button>
+                        <button type="button" class="active">Month</button>
+                        <button type="button">Week</button>
+                        <button type="button">Day</button>
+                    </div>
+                    <div id="calendar"></div>
+                </div> 
+            </div>
         </div>
+       
     </div>
 
     <!-- DayPilot library -->
