modified:   src/main/resources/static/css/schedule.css 	modified:   src/main/resources/templates/schedule.html

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/schedule.css}">
     <link rel="stylesheet" th:href="@{/css/navStyle.css}">
-    <link rel="stylesheet" th:href="@{/css/eventTab.css}">
     <link rel="stylesheet" th:href="@{/css/listStyle.css}">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/dashboard.css}">
     <link rel="stylesheet" th:href="@{/css/CEF.css}">
+    <link rel="stylesheet" th:href="@{/css/schedule.css}">
     <title>Document</title>
 </head>
 <body>
@@ -36,5 +36,10 @@
     <!-- DayPilot library -->
     <script th:src="@{/js/daypilot/daypilot-all.min.js}"></script>
     <script th:src="@{/js/schedule.js}"></script>
+    <script th:src="@{/js/nav.js}"></script>
+    <script th:src="@{/js/lists.js}"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script th:src="@{/js/searchbar.js}"></script>
 </body>
 </html>
