modified:   src/main/resources/templates/eventTab.html

--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -89,6 +89,7 @@
                     <span class="venueTitle">Venue: </span>
                     <span class="venue"></span>
                 </div>
+                <button type="button" id="editV">editVenue</button>
                 <div class="progress-bar">
                     <div class="progress-bar-fill" ></div>
                 </div>
