--- a/src/main/resources/static/css/eventTab.css
+++ b/src/main/resources/static/css/eventTab.css
@@ -9,8 +9,8 @@
     padding: 0!important;
     background-color: #ffffff!important;
     opacity: 1;
-    transition: opacity 0.5s;     
- } 
+    transition: opacity 0.5s;
+ }
 a{
     text-decoration: none;
 }
@@ -35,7 +35,7 @@ a{
     margin-right: 20px;
     margin-bottom: 10px;
 }
-.table-lists .tab:hover{ 
+.table-lists .tab:hover{
     cursor: pointer;
 }
 .table-lists .tab.active{
@@ -148,7 +148,7 @@ aside{
     padding: 0 10px;
     /* Customizes the whole scrollbar */
     /*For firefox*/
-    /* scrollbar-width: thin; 
+    /* scrollbar-width: thin;
 
     scrollbar-color: #555; */
 }
@@ -308,3 +308,26 @@ nav[aria-label="breadcrumb"] {
     border-radius: 25px;
     transition: width 1s;
 }
+
+.overlayViewSheet {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Semi-transparent black overlay */
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow-y:auto;
+  }
+
+/* .down65{
+    background-color: var(--blue);
+    width: fit-content;
+    height: fit-content;
+    padding: 5px;
+    border: none;
+    border-radius: 20px;
+} */
