--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -121,7 +121,7 @@
           <div class="formdet"><label for="venueName" >Venue Name:</label>
           <input type="text" id="venueName" name="name" required><br><br></div>
 
-          <div class="formdet"><label for="FullAddress" >Venue Address:</label>
+          <div class="formdet"><label for="venueFullAddress" >Venue Address:</label>
           <input type="text" id="venueFullAddress" name="address" ><br><br></div>
 
           <div class="formdet"><label for="venueCity" >Venue City:</label>
