--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li>
-                    <a th:href="@{/contact}">
+                    <a th:href="@{/contacts}">
                         <span class="icon">
                             <ion-icon name="people-outline"></ion-icon>
                         </span>
