modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/User.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/contact.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/event.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/expense.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/task.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/type.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/venue.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/taskRepository.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/TaskServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactService.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/taskService.java 	modified:   src/main/resources/static/js/lists.js 	deleted:    src/main/resources/static/manager-images/14e92076d89141df8412f27df97ea3a9.jpg 	deleted:    src/main/resources/static/manager-images/17794.jpg 	deleted:    src/main/resources/static/manager-images/21305.jpg 	deleted:    src/main/resources/static/manager-images/2150980242.jpg 	deleted:    src/main/resources/static/manager-images/2151048064.jpg 	deleted:    src/main/resources/static/manager-images/4744eb9e2ccbb1dc0c15b359f1c2c146.jpg 	new file:   src/main/resources/static/manager-images/6aaded13a345254570f535f41b915bd2.jpg 	deleted:    src/

--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -63,8 +63,6 @@
                             <a href="#"><img src="./assets/imgs/icons8_downloading_updates_24px.png" alt=""
                                     style="scale: 1.45; margin-right: 10px; margin-top: 2px;"></a>
                             <a href="#" id="displayFormBtn" class="btn">Add a new contact</a>
-
-
                         </div>
                     </div>
 
@@ -86,16 +84,14 @@
 								<td th:text="${contact.country}"></td>
 
 								<td><a th:href="@{'/contacts/' + ${contact.contactId} + '/edit'}">Edit</a></td>
-                				<td><a th:href="@{'/contacts/' + ${contact.contactId}+'/delete'}">Delete</a></td>
-								<td><a th:href="@{'/contacts/' + ${contact.contactId} + '/edit'}">Edit</a></td>
-                				<td><a th:href="@{'/contacts/' + ${contact.contactId}+'/delete'}">Delete</a></td>
+                				<td><a th:href="@{'/contacts/' + ${contact.contactId} + '/delete'}">Delete</a></td>
 							</tr>
                         </tbody>
                     </table>
                 </div>
 
 				<div id="overlay" class="overlay" style="flex-direction: column;">
-					<form class="form-container" id="contactForm" action="/save-project" method="post" style="padding: 25px;border-radius: 20px;">
+					<form class="form-container" id="contactForm" th:action= "@{/contacts/save-project}" method="post" style="padding: 25px;border-radius: 20px;">
 						<h2><center>Fill the Contact Form</center></h2>
 					  <div class="form-group">
 						<label for="name">Name:</label>
@@ -132,7 +128,7 @@
 		</div>
 
 </body>
-<script src="../js/nav.js"></script>
+<script src="/js/nav.js"></script>
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
