--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/navStyle.css}">
+    <link rel="stylesheet" th:href="@{css/topBar.css}">
     <link rel="stylesheet" th:href="@{/css/eventTab.css}">
     <link rel="stylesheet" th:href="@{/css/listStyle.css}">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
