--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <title>Dashboard EMS</title>
     <!-- ======= Styles ====== -->
     <link rel="stylesheet" th:href="@{css/dashboard.css}">
+    <link rel="stylesheet" th:href="@{css/topBar.css}">
     <link rel="stylesheet" th:href="@{css/navStyle.css}">
     <link rel="stylesheet" th:href="@{css/styles.css}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
