--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard EMS</title>
     <!-- ======= Styles ====== -->
-    <link rel="stylesheet" th:href="@{css/dashboard.css}">
+    <link rel="stylesheet" th:href="@{/css/dashboard.css}">
     <link rel="stylesheet" th:href="@{css/navStyle.css}">
     <link rel="stylesheet" th:href="@{css/styles.css}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
@@ -17,241 +17,89 @@
     <!-- =============== Navigation ================ -->
     <div class="navigation" th:replace="~{navigation :: navigation}">
     </div>
-    <div class="container">
-        <!-- ========================= Main ==================== -->
-        <div class="main">
-            <div class="topbar" th:replace="~{topBar :: topBar}">
-        </div>
+    <div class="container ultimate">    
+        <div class="topbar" th:replace="~{topBar :: topBar}"></div>
+        <h1>Dashboard</h1>
+        <div class="container">
+            <main class="main">
 
-            <!-- ======================= Cards ================== -->
-            <div class="cardBox">
-                <div class="card">
-                    <div>
-                        <div class="numbers">1,504</div>
-                        <div class="cardName">Attendees</div>
-                    </div>
-
-                    <div class="iconBx">
-                        <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div>
-                        <div class="numbers">80</div>
-                        <div class="cardName">Sales</div>
-                    </div>
-
-                    <div class="iconBx">
-                        <ion-icon name="cart-outline"></ion-icon>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div>
-                        <div class="numbers">284</div>
-                        <div class="cardName">School Population</div>
-                    </div>
-
-                    <div class="iconBx">
-                        <ion-icon name="chatbubbles-outline"></ion-icon>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div>
-                        <div class="numbers">$7,842</div>
-                        <div class="cardName">Budget</div>
-                    </div>
-
-                    <div class="iconBx">
-                        <ion-icon name="cash-outline"></ion-icon>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ================ Order Details List ================= -->
-            <div class="details">
-                <div class="recentOrders">
-                    <div class="cardHeader">
-                        <h2>Some Events</h2>
-                        <div class="carHeaderleft">
-                            <a href="#"><img src="./assets/imgs/icons8_downloading_updates_24px.png" alt=""
-                                    style="scale: 1.45; margin-right: 10px; margin-top: 2px;"></a>
-                            <a href="#" id="displayFormBtn" class="btn">Create an Event</a>
-                            <a href="#" id="displayFormBtnTask" class="btn">Go to Task</a>
-                            <button id="downloadBtn" class="btn" style="border: none; cursor: pointer;">PDF Downlaod</button>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-8">
-                                            <nav style="--bs-breadcrumb-divider:'>'" aria-label="breadcrumb">
-                                                <ol class="breadcrumb">
-                                                <li class="breadcrumb-item active" aria-current="page">home
-                    
-                                                </li>
-                                            
-                                            </ol> 
-                                            </nav>
-                                    </div>
-                                </div>
-                             </div>
-
+                
+                <div class="cardBox">
+                    <div class="card">
+                        <div>
+                            <div class="numbers" th:text="${totalEvents}"></div>
+                            <div class="cardName">Events</div>
+                        </div>
+    
+                        <div class="iconBx">
+                            <ion-icon name="calendar-number-outline"></ion-icon>
                         </div>
                     </div>
-
-                    <table id="myTable">
-                        <thead>
+                    <div class="card">
+                        <div>
+                            <div class="numbers">1,504</div>
+                            <div class="cardName">Budget</div>
+                        </div>
+    
+                        <div class="iconBx">
+                            <ion-icon name="cash-outline"></ion-icon>
+                        </div>
+                    </div>
+    
+                    
+    
+                    <div class="card">
+                        <div>
+                            <div class="numbers" th:text="${paidEventCount}"></div>
+                            <div class="cardName">Attendees</div>
+                        </div>
+    
+                        <div class="iconBx">
+                            <ion-icon name="people-outline"></ion-icon>
+                        </div>
+                    </div>
+                </div>    
+                <div class="photo"></div>
+                <div class="container table">
+                    <button class="btn-table">add event</button>
+                    <table class="tabTable active" id="eventRest" th:fragment="eventList">
+                        <thead class="tablehead">
                             <tr>
-                                <td>Name</td>
-                                <td>Price</td>
-                                <td>Payment</td>
-                                <td>Status</td>
+                                <th></th>
+                                <th>Name</th>
+                                <th>Type</th>
+                                <th>Venue</th>
+                                <th>Start Date</th>
+                                
                             </tr>
                         </thead>
+                        <tbody class="table-group-divider">
+                            <tr class="table-primary" th:each="event : ${eventList}">
+                                <td scope="row" class="check">
+                                    <label for="row-1"></label>
+                                    
+                                </td>
+                                <td th:text="${event.getName()}"></td>
+                                <td th:text="${event.getEventType().getName()}"></td>
+                                <td th:text="${event.getEventVenue().getName()}"></td>
+                                <td th:text="${event.getStartDate()}"></td>
 
-                        <tbody>
-                            <tr>
-                                <td>Star Refrigerator</td>
-                                <td>$1200</td>
-                                <td>Paid</td>
-                                <td><span class="status delivered">Delivered</span></td>
-                            </tr>
 
-                            <tr>
-                                <td>Dell Laptop</td>
-                                <td>$110</td>
-                                <td>Due</td>
-                                <td><span class="status pending">Pending</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>Apple Watch</td>
-                                <td>$1200</td>
-                                <td>Paid</td>
-                                <td><span class="status return">Return</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>Addidas Shoes</td>
-                                <td>$620</td>
-                                <td>Due</td>
-                                <td><span class="status inProgress">In Progress</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>Star Refrigerator</td>
-                                <td>$1200</td>
-                                <td>Paid</td>
-                                <td><span class="status delivered">Delivered</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>Dell Laptop</td>
-                                <td>$110</td>
-                                <td>Due</td>
-                                <td><span class="status pending">Pending</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>Apple Watch</td>
-                                <td>$1200</td>
-                                <td>Paid</td>
-                                <td><span class="status return">Return</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>Addidas Shoes</td>
-                                <td>$620</td>
-                                <td>Due</td>
-                                <td><span class="status inProgress">In Progress</span></td>
-                            </tr>
+                                
                         </tbody>
                     </table>
                 </div>
+            </main>
+            <aside class="side">
+                <div class="tasksList"></div>
+                <div class="graphics"></div>
 
-                <!-- ================= New Customers ================ -->
-                <div class="recentCustomers">
-                    <div class="cardHeader">
-                        <h2>Progression Bar</h2>
-                    </div>
-
-                    <table>
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>David <br> <span>Italy</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>Amit <br> <span>India</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>David <br> <span>Italy</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>Amit <br> <span>India</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>David <br> <span>Italy</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>Amit <br> <span>India</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>David <br> <span>Italy</span></h4>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td width="60px">
-                                <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
-                            </td>
-                            <td>
-                                <h4>Amit <br> <span>India</span></h4>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+            </aside>
         </div>
+
     </div>
+        <!-- ========================= Main ==================== -->
+       
 
     <div id="overlay" class="overlay"  th:replace="~{createEventForm :: createEventForm}">
     </div>
