modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/UserController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/activityRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	deleted:    src/main/java/com/gp2/appwebeventsmanagementgp2/controller/managerController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/taskRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/ActivityDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/BudgetDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/EventDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/ExpenseDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/UserDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/User.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/activity.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/event.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/expense.java 	deleted:    src/main/java/com/gp2/appwebeventsmanagementgp2/models/login.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/task.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/type.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/venue.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/activityRepository.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/contactRepository.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/eventRepository.java 

--- a/src/main/resources/templates/Budget.html
+++ b/src/main/resources/templates/Budget.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Insert title here</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/dashboard.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/topBar.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/navStyle.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/contact.css}">
