--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONTACTS</title>
 <link rel="stylesheet" th:href="@{/css/dashboard.css}">
+<link rel="stylesheet" th:href="@{/css/topBar.css}">
 <link rel="stylesheet" th:href="@{/css/navStyle.css}">
 <link rel="stylesheet" th:href="@{/css/styles.css}">
 <link rel="stylesheet" th:href="@{/css/contact.css}">
