--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <table class="tabTable active" id="eventRest" th:fragment="eventList">
-        <thead class="tablehead">
+        <div class="tablehead">
+            <span>Name</span>
+            <span>Name</span>
+            <span>Name</span>
+            <span>Name</span>
+            <span>Name</span>
+            <span>Name</span>
+        </div>
+        <!-- <thead class="">
             <tr>
                 <th></th>
                 <th>Name</th>
@@ -18,7 +26,7 @@
                 <th>Estimated Budget</th>
                 <th>Date Modified</th>
             </tr>
-        </thead>
+        </thead> -->
         <tbody class="table-group-divider">
             <tr class="table-primary">   
             </tr>
