--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -49,7 +49,7 @@
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 		height: fit-content;
-		width: fit-content;
+		/* width: fit-content; */
         overflow-y: auto;
         padding: 3%;
     }
