--- a/src/main/resources/static/css/listStyle.css
+++ b/src/main/resources/static/css/listStyle.css
@@ -1,4 +1,38 @@
-@import url("styles.css");
+@import url("styles.css"); /*actually works*/
+
+.tabTable{
+    display: none;
+}
+.tabTable.active{
+    display: table;
+    animation: moving 0.8s ease;
+}
+@keyframes moving{
+    from{transform: translateX(40px); opacity: 0; }
+    to{transform: translateX(0px); opacity: 1;}
+}
+table *{
+    padding: 10px;
+}
+table{
+    border-spacing: 0;
+
+    input{
+        width: 18px;
+        height: 18px;
+    }
+}
+.tablehead{
+    position: relative;
+    background-color: var(--white);
+    color: var(--black3);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
+    margin-bottom: 20px;
+    z-index: 5;
+    th{
+        font-weight: 400;
+    }
+}
 
 .selected {
     background-color: #d1f0ff;
