modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/SecurityConfig.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/ActivityDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/BudgetDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/EventDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/activity.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/budget.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/contact.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/contactType.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/contactTypeMapping.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/event.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/ActivityServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/BudgetServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/EventServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactServiceImpl.java 	modified:   src/main/resources/static/css/eventTab.css 	modified:   src/main/resources/static/css/listStyle.css 	modified:   src/main/resources/static/css/navStyle.css 	modified:   src/main/resources/static/css/styles.css 	modified:   src/main/resources/static/css/topBar.css 	new file:   src/main/resources/static/images/EventTabIcons/download.svg 	new file:   src/main/resources/static/images/EventTabIcons/end.svg 	new file:   src/main/resources/static/images/EventTabIcons/start.svg 	new file:   src/main/resources/static/images/EventTabIcons/venue.svg 	modified:   src/main/resources/static

--- a/src/main/resources/static/css/listStyle.css
+++ b/src/main/resources/static/css/listStyle.css
@@ -15,22 +15,26 @@ table *{
     padding: 10px;
 }
 table{
-    border-spacing: 0;
-
+    border-spacing: 0px 10px;
+    text-align: left;
+    width: 100%;
     input{
         width: 18px;
         height: 18px;
     }
+}
+.hidden-head{
+    color: var(--white);
 }
 .tablehead{
     position: relative;
     background-color: var(--white);
     color: var(--black3);
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
-    margin-bottom: 20px;
     z-index: 5;
     th{
         font-weight: 400;
+        height: 68px;
     }
 }
 
