--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -7,27 +7,20 @@
 </head>
 <body>
     <table class="tabTable active" id="eventRest" th:fragment="eventList">
-        <div class="tablehead">
-            <span>Name</span>
-            <span>Name</span>
-            <span>Name</span>
-            <span>Name</span>
-            <span>Name</span>
-            <span>Name</span>
-        </div>
-        <!-- <thead class="">
+        <thead class="tablehead">
             <tr>
-                <th></th>
+                <th class="hidden-head">check</th>
                 <th>Name</th>
                 <th>Type</th>
-                <th>Venue</th>
+                <th>Paid</th>
                 <th>Status</th>
-                <th>Start Date</th>
                 <th>Estimated Budget</th>
                 <th>Date Modified</th>
+                <th class="hidden-head">edit</th>
+                <th class="hidden-head">delete</th>
             </tr>
-        </thead> -->
-        <tbody class="table-group-divider">
+        </thead>
+        <tbody class="table-group-divider bodyTable">
             <tr class="table-primary">   
             </tr>
         </tbody>
