--- a/src/main/resources/static/css/eventTab.css
+++ b/src/main/resources/static/css/eventTab.css
@@ -3,21 +3,20 @@
     display: flex;
 }
 main{
-    width: 75%;
+    width: 70%;
+    padding: 0 40px;
 }
 .actionBtns{
     display: flex;
     justify-content: flex-end;
     gap: 20px;
-    padding: 0 20px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
-.main-tables{
+.container.main-tables{
     position: relative;
-    width: 96%;
-    height: 70%;
+    height: 69%;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 30px;
     padding: 20px 40px;
     background-color: var(--white);
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.10);
@@ -25,16 +24,23 @@ main{
 }
 .table-lists{
     position: relative;
-    margin: 20px 0;
+    margin: 20px 0 10px 0;
 }
 .table-lists .tab{
     color: #4B4B4B;
     border: none;
     background-color: transparent;
     font-size: 18px;
-    font-weight: medium;
-    margin-right: 20px;
+    font-weight: 400;
+    margin-right: 40px;
     margin-bottom: 7px;
+    transition: 0.2s;
+}
+.table-lists .tab:hover{
+    cursor: pointer;
+    color: var(--black1);
+    font-weight: bold;
+    transition: 0.2s;
 }
 .table-lists .tab.active{
     color: var(--black1);
@@ -50,16 +56,112 @@ main{
     background-color: var(--blue);
     transition: all 0.3s ease-in-out;
 }
-.pagination{
-    position: absolute;
-    bottom: 10px;
-    left: 40%;
-}
+
 aside{
-    background-color: brown;
+    width: 30%;
+    padding: 20px;
+    box-shadow: 0 3px 30px rgba(0, 0, 0, 0.15);
+}
+aside *{
+    margin: auto;
+}
+.username{
+    text-align: center;
+    margin-top: 10px;
+    span{
+        font-weight: 500;
+    }
+}
+aside .user{
+    width: 60px;
+    height: 60px;
+}
+.user img{
+    position: relative;
+    left: 0;
+    right: 0;
+}
+.cardSide{
+    display: none;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 14px;
+    padding: 0px 10px;
 }
 
+.cardSide span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.title-card{
+    font-weight: 500;
+}
+
+.cardSide .circle{
+    width: 40px;
+    height: 40px;
+    background-color: #D7EBFF;
+    border-radius: 100%;
+}
+.card-budget{
+    min-height: 40px;
+    min-width: 110px;
+    color: var(--black2);
+}
+.eventInfo .image{
+    width: 100%;
+    height: 300px;
+    background-color: #4B4B4B;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.info1{
+    border: 1px solid var(--black2);
+    border-radius: 10px;
+}
+.titleInfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.event-card-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+}
+
+.event-card-info img{
+    width: 50px;
+}
+.event-card-info.venue{
+    margin-bottom: 20px;
+}
+.separator{
+    width: 50px;
+    height: 40%;
+    background-color: #D6D6D6;
+}
+.event-card-info.dates a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.break{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 80px;
+}
 /*COMMON STYLES*/
 .main-btn{
     padding: 10px 12px;
@@ -77,6 +179,54 @@ aside{
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
     border: none;
 }
+
+.breadCrumb ul li{
+    display: inline;
+    text-decoration: none;
+}
+
+#currentPN{
+    border: none;
+    background-color: transparent;
+    width: 20px;
+    font-size: 16px;
+}
+#currentPN:focus{
+    outline: none;
+}
+
+.pagination{
+    position: absolute;
+    bottom: 30px;
+    right: 45%;
+}
+.pagination div{
+    display: flex;
+    align-items: center;
+}
+.page{
+    transition: all 0.3s ease-in-out;
+    height: 40px;
+    width: 40px;
+    background-color: transparent;
+    border: 2px solid var(--blue);
+    color: var(--blue);
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 50%;
+    margin: 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page:hover{
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    background-color: var(--blue);
+    color: var(--white);
+}
+
 
 /* * {
     font-family: "Poppins","Ubuntu", sans-serif !important;
