--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -11,7 +11,8 @@
 }
 
 :root {
-  --blue: #9500ff;
+  /* --blue: #9500ff; */
+  --blue: #4aa3fc;
   --blue2: #4aa3fc;
   --blue3: #9effec;
   --white: #fff;
@@ -38,8 +39,8 @@ body {
 /* ===================== Main ===================== */
 .main {
     position: absolute;
-    width: calc(100% - 300px);
-    left: 300px;
+    width: calc(100% - 220px);
+    left: 220px;
     min-height: 100vh;
     background: var(--white);
     transition: 0.5s;
@@ -47,78 +48,4 @@ body {
   .main.active {
     width: calc(100% - 80px);
     left: 80px;
-  }
-
-  .topbar {
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-  }
-
-  .toggle {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5rem;
-    cursor: pointer;
-  }
-
-  .search {
-    position: relative;
-    width: 400px;
-    margin: 0 10px;
-  }
-
-  .search label {
-    position: relative;
-    width: 100%;
-  }
-
-  .search label input {
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    padding: 5px 20px;
-    padding-left: 35px;
-    font-size: 18px;
-    outline: none;
-    border: 1px solid var(--black2);
-  }
-
-  .search label ion-icon {
-    position: absolute;
-    top: 0;
-    left: 10px;
-    font-size: 1.2rem;
-  }
-
-  .user {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-    cursor: pointer;
-  }
-
-  .userDetails{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  }
-
-  .user img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
