--- a/src/main/resources/static/css/topBar.css
+++ b/src/main/resources/static/css/topBar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
+    /* padding: 0 10px; */
   }
   
   .toggle {
