--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -41,21 +41,133 @@
                 <table th:replace="~{Lists :: venueList}" id="dataTable"></table>
 
                 <div class="pagination">
-                    <div type="button" class="page" id="previous"><ion-icon name="chevron-back-outline"></ion-icon></div>
-                    <span class="pageNumber">
-                        <input type="text" title="currentPageNumber" name="currentPN" id="currentPN">
-                        /
-                        <span class="totalPN"></span>
-                    </span>
-                    <div type="button" class="page" id="next"><ion-icon name="chevron-forward-outline"></ion-icon></div>
+                    <div>
+                        <div type="button" class="page" id="previous"><ion-icon name="chevron-back-outline"></ion-icon></div>
+                        <span class="pageNumber">
+                            <input type="text" title="currentPageNumber" name="currentPN" id="currentPN">
+                            /
+                            <span class="totalPN"></span>
+                        </span>
+                        <div type="button" class="page" id="next"><ion-icon name="chevron-forward-outline"></ion-icon></div>
+                    </div>
                 </div>
             </div>
         </main>
         <aside>
-            <div class="userInfo"></div>
-            <div class="cardSide"></div>
+            <div class="user">
+                <img src="/manager-images/profile.jpg" alt="userProfile">
+            </div>
+            <div class="username">Welcome, <span>Carmela</span></div>
+            <div class="cardSide">
+                <div class="tasks">
+                    <span class="title-card">Tasks</span>
+                    <span class="circle card-task">24</span>
+                </div>
+                <div class="budget">
+                    <span class="title-card">Budget</span>
+                    <span class="card-budget">250.000 FCFA</span>
+                </div>
+                <div class="activities">
+                    <span class="title-card">Activities</span>
+                    <span class="circle card-activities">600</span>
+                </div>
+            </div>
             <div class="eventInfo">
-
+                <div class="image"></div>
+                <div class="info1">
+                    <div class="titleInfo">
+                        <p>Mountain climbing</p>
+                        <a href="" title="downlaod sheet"><img src="/images/EventTabIcons/download.svg" alt=""></a>
+                    </div>
+                    <a href="" class="event-card-info venue" title="venue">
+                        <img src="/images/EventTabIcons/venue.svg" alt="">
+                        <div>
+                            <h6>Venue</h6>
+                            <p>Acacia</p>
+                            <p class="break">RFRQ+CCQ, Yaoundé,Cameroon</p>
+                        </div>
+                        <div class="separator"></div>
+                        <div>
+                            <h6>Latitude</h6>
+                            <p class="break">12.565463232354</p>
+                        </div>
+                        <div class="separator"></div>
+                        <div>
+                            <h6>Longitude</h6>
+                            <p class="break">45.045859632451</p>
+                        </div>
+                    </a>
+                    <div class="event-card-info dates">
+                        <a href="" class="Date" title="startDate">
+                            <img src="/images/EventTabIcons/start.svg" alt="">
+                            <div>
+                                <h6>Venue</h6>
+                                <p>Acacia</p>
+                                <p>RFRQ+CCQ, Yaoundé,Cameroon</p>
+                            </div>
+                        </a>
+                        <a href="" class="Date" title="endDate">
+                            <img src="/images/EventTabIcons/end.svg" alt="">
+                            <div>
+                                <h6>Venue</h6>
+                                <p>Acacia</p>
+                                <p>RFRQ+CCQ, Yaoundé,Cameroon</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="info2">
+                    <div class="taskInfo">
+                        <p>Tasks</p>
+                        <div class="progression">
+                            <div class="progressBar"></div>
+                        </div>
+                        <p>30%</p>
+                    </div>
+                    <hr>
+                    <a href="" class="taskCard">
+                        <h6 class="taskTitle">Cleaning Room306</h6>
+                        <div class="taskBody">
+                            <img src="" alt="">
+                            <div class="assignee">
+                                <p>John Doe</p>
+                                <p>Junior Enterprise</p>
+                            </div>
+                            <div>
+                                <p>Before 12/12/2021</p>
+                                <p class="status">Ongoing</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="" class="taskCard">
+                        <h6 class="taskTitle">Cleaning Room306</h6>
+                        <div class="taskBody">
+                            <img src="" alt="">
+                            <div class="assignee">
+                                <p>John Doe</p>
+                                <p>Junior Enterprise</p>
+                            </div>
+                            <div>
+                                <p>Before 12/12/2021</p>
+                                <p class="status">Ongoing</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="" class="taskCard">
+                        <h6 class="taskTitle">Cleaning Room306</h6>
+                        <div class="taskBody">
+                            <img src="" alt="">
+                            <div class="assignee">
+                                <p>John Doe</p>
+                                <p>Junior Enterprise</p>
+                            </div>
+                            <div>
+                                <p>Before 12/12/2021</p>
+                                <p class="status">Ongoing</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class="sheet">
                 <a href="">view sheet</a>
